--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "chai": "^4.3.7",
-    "hardhat": "^2.22.19"
+    "ethers": "^6.0.0",
+    "hardhat": "^2.23.0"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "dotenv": "^16.4.7",
-    "ethereum-waffle": "^4.0.10"
+    "dotenv": "^16.4.7"
   }
 }
